<resources>
    <string name="app_name">Angkot On the Way</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="i_m_a_driver">I\'m a Driver</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="title_activity_driver_map">Angkot On the Way</string>
    <string name="logout">Logout</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="informasi_angkot">Informasi Angkot</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="null_email_password">Masukkan email dan password!</string>
    <string name="null_email">Masukkan email!</string>
    <string name="null_password">Masukkan password!</string>
    <string name="no_connection">Pastikan Koneksi Aktif </string>
    <string name="jurusan_angkot">Jurusan Angkot</string>
    <string name="rute_awal">Rute Awal</string>
    <string name="rute_akhir">Rute Akhir</string>
    <string name="toggle_gps_off">GPS Off</string>
    <string name="toggle_gps_on">GPS On</string>


</resources>
