<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_infoangkot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.angkotontheway.InformasiAngkotActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_margin="16dp">
    <ImageView
        android:id="@+id/gambarangkot"
        android:layout_width="2000dp"
        android:layout_height="150dp"
        android:src="@drawable/angkot1"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/jurusan"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/jurusan_angkot"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rute_awal"
        android:layout_gravity="left"
        android:textSize="18sp"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/ruteawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rute_awal"
        android:textSize="14sp"
        android:padding="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rute_akhir"
        android:layout_gravity="left"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/rutekembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rute_akhir"
        android:textSize="14sp"
        android:padding="16dp"/>
    </LinearLayout>
</ScrollView>